--- a/css/main.css
+++ b/css/main.css
@@ -76,7 +76,7 @@
 *{
     padding: 0;
     margin: 0;
-    font-family: Roboto;
+    font-family: Robotoб sans-serif;
 }
 button, 
 button:active, 
@@ -264,11 +264,20 @@ button.go{
 	-webkit-transition: .5s ease all;
 	-o-transition: .5s ease all;
 	transition: .5s ease all;
+    overflow-y: scroll;
 }
 .side-panel.open{
 	left: 0;
 }
 
 .footer{
-	display: none;
+	height: 27px;
+	background-color: #4285F4;
+	color: #fff;
+    line-height: 27px;
+    text-align: center;
+}
+.footer a{
+    color: #fff;
+    font-size: 16px;
 }
