--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 /*import fonts*/
-	@font-face {
+	/*@font-face {
 	    font-family: 'Roboto';
 	    src: local('Roboto Thin'), local('Roboto-Thin'), url('../fonts/Roboto/Robotothin.woff2') format('woff2'), url('../fonts/Robotothin.woff') format('woff'), url('../fonts/Robotothin.ttf') format('truetype');
 	    font-weight: 100;
@@ -71,12 +71,74 @@
 	    font-weight: 900;
 	    font-style: italic;
 	}
+*/
+/*Myriad*/
+	@font-face {
+		font-family: "MyriadProRegular";
+		src: url("../fonts/MyriadProRegular/MyriadProRegular.eot");
+		src: url("../fonts/MyriadProRegular/MyriadProRegular.eot?#iefix")format("embedded-opentype"),
+		url("../fonts/MyriadProRegular/MyriadProRegular.woff") format("woff"),
+		url("../fonts/MyriadProRegular/MyriadProRegular.ttf") format("truetype");
+		font-style: normal;
+		font-weight: normal;
+	}
+
+	@font-face {
+		font-family: "MyriadProBold";
+		src: url("../fonts/MyriadProBold/MyriadProBold.eot");
+		src: url("../fonts/MyriadProBold/MyriadProBold.eot?#iefix")format("embedded-opentype"),
+		url("../fonts/MyriadProBold/MyriadProBold.woff") format("woff"),
+		url("../fonts/MyriadProBold/MyriadProBold.ttf") format("truetype");
+		font-style: normal;
+		font-weight: normal;
+	}
+
+	@font-face {
+		font-family: "MyriadProItalic";
+		src: url("../fonts/MyriadProItalic/MyriadProItalic.eot");
+		src: url("../fonts/MyriadProItalic/MyriadProItalic.eot?#iefix")format("embedded-opentype"),
+		url("../fonts/MyriadProItalic/MyriadProItalic.woff") format("woff"),
+		url("../fonts/MyriadProItalic/MyriadProItalic.ttf") format("truetype");
+		font-style: normal;
+		font-weight: normal;
+	}
+
+	@font-face {
+		font-family: "MyriadProSemiBold";
+		src: url("../fonts/MyriadProSemiBold/MyriadProSemiBold.eot");
+		src: url("../fonts/MyriadProSemiBold/MyriadProSemiBold.eot?#iefix")format("embedded-opentype"),
+		url("../fonts/MyriadProSemiBold/MyriadProSemiBold.woff") format("woff"),
+		url("../fonts/MyriadProSemiBold/MyriadProSemiBold.ttf") format("truetype");
+		font-style: normal;
+		font-weight: normal;
+	}
+
+	@font-face {
+		font-family: "MyriadProBoldItalic";
+		src: url("../fonts/MyriadProBoldItalic/MyriadProBoldItalic.eot");
+		src: url("../fonts/MyriadProBoldItalic/MyriadProBoldItalic.eot?#iefix")format("embedded-opentype"),
+		url("../fonts/MyriadProBoldItalic/MyriadProBoldItalic.woff") format("woff"),
+		url("../fonts/MyriadProBoldItalic/MyriadProBoldItalic.ttf") format("truetype");
+		font-style: normal;
+		font-weight: normal;
+	}
+
+	@font-face {
+		font-family: "MyriadProSemiBoldItalic";
+		src: url("../fonts/MyriadProSemiBoldItalic/MyriadProSemiBoldItalic.eot");
+		src: url("../fonts/MyriadProSemiBoldItalic/MyriadProSemiBoldItalic.eot?#iefix")format("embedded-opentype"),
+		url("../fonts/MyriadProSemiBoldItalic/MyriadProSemiBoldItalic.woff") format("woff"),
+		url("../fonts/MyriadProSemiBoldItalic/MyriadProSemiBoldItalic.ttf") format("truetype");
+		font-style: normal;
+		font-weight: normal;
+	}
 
 
 *{
     padding: 0;
     margin: 0;
-    font-family: Robotoб sans-serif;
+    font-family: MyriadProRegular, sans-serif;
+	font-size: 18px;
 }
 button, 
 button:active, 
@@ -86,198 +148,335 @@ input:active,
 input:focus {
     outline: none;
 }
+html, body, #map {
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	padding: 0;
+}
+#map {
+	position: relative;
+}
+.wrap .container{
+	position: relative;
+}
 
+.row:after {
+	content: "";
+	display: table;
+	clear: both;
+}
+/*
 
 #map{
-	height: 400px;
+	height: 500px;
 	width: 100%;
-}
-button.go{
-	padding: 20px 40px;
-	position: absolute;
-	top: 20px;
-	right: 20px;
-	background-color: #fff;
-	border: 1px solid #000;
-	z-index: 1000;
-	border-radius: 20px;
-	cursor: pointer;
-	outline: none;
-}
-#wrap-table{
-	padding: 20px;
-	min-height: 1px;
-	min-width: 1px;
-}
-#wrap-table table{
-	border-collapse:collapse;
-	margin: 0 auto;
-}
-#wrap-table table td{
-	border: 1px solid #000;
-	padding: 3px 10px;
-}
-
-
-
-
-.button-top{
-	background-color: rgba(0,0,0,0);
-	border: none;
-	font-size: 16px;
-	outline: none;
-	-webkit-transition: .5s ease all;
-	-o-transition: .5s ease all;
-	transition: .5s ease all;
-	border-radius: 5px;
-	padding: 5px 10px;
-	font-size: 16px;
-	vertical-align: top;
-	height: 38px;
-	margin: 0 5px;
-}
-
-.button-top i{
-	font-size: 20px;
-}
-.buttons .button-top i{
-	font-size: 20px;
-	vertical-align: top;
-	margin-top: 1px;
-	font-size: 24px;
- }
-.button-top.button-info i{
-	margin-top: 3px;
-}
-.button-top .name{
-	width: 0;
-	margin: 3px;
-	display: inline-block;
-	overflow: hidden;
-	text-align: left;
-	-webkit-transition: .5s ease all;
-	-o-transition: .5s ease all;
-	transition: .5s ease all;
-}
-.header:hover .button-top .name{
-    width: 80px;
-}
-.header .button-top:hover{
-	-webkit-box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.63);
-	-moz-box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.63);
-	box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.63);
-}
-
-/*bootstrap*/
+}*/
 .header{
-	height: 64px;
-	background-color: #4285F4;
-	color: #fff;
-
-}
-.header .button-menu{
-	display: inline-block;
-	width: 38px;
-	height: 38px;
-	padding-top: 7px;
-	vertical-align: top;
-	border-radius: 50px;
-	margin-top: 12px;
-}
-.header .button-menu:hover{
-	-webkit-box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.63);
-	-moz-box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.63);
-	box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.63);
-}
-.header .button-top:active, .header .button-menu:active{
-	transform: scale(0.95);
-	-webkit-box-shadow: 0px 2px 6px -2px rgba(0,0,0,0.63);
-	-moz-box-shadow: 0px 2px 6px -2px rgba(0,0,0,0.63);
-	box-shadow: 0px 2px 6px -2px rgba(0,0,0,0.63);
-}
-.header .logo{
-	display: inline-block;
-	height: 64px;
-	vertical-align: top;
-	font-size: 18px;
-	padding: 8px 10px;
-}
-.header .logo .text{
-	border: 1px solid #fff;
-	padding: 10px 10px; 
-	border-radius: 4px;
-	display: inline-block;
+	height: 0;
+	background-color: transparent;
+	top: 0;
+	left: 0;
+	z-index: 100;
+	width: 100%;
+	position: absolute;
 }
 .header .search{
-	display: inline-block;
-	height: 64px;
-	vertical-align:top;
-    position: relative;
+	width: 350px;
+	position: absolute;
+	left: 0;
+	top: 24px;
+}
+.header .search input{
+	border-radius: 12px;
+	background-color: #fff;
+	padding: 10px 20px;
+	box-shadow: 0 0 20px rgba(0,0,0,0.2);
+	width: 100%;
+	border: none;
+	font-size: 18px;
+	padding-right: 40px;
 }
 .header .search .icon{
 	position: absolute;
-	color: #555;
-	z-index: 100;
-	top: 17px;
-	left: 10px;
+	right: 10px;
+	top: 6px;
 	font-size: 20px;
 }
-.header .search #searchTextField{
-	padding: 5px 10px 5px 40px;
-	width: 700px;
-	margin-top: 8px;
-	color: #555;
-	border: none;
-	border-radius: 4px;
-	height: 46px;
-	font-size: 16px;
-	-webkit-transition: .5s ease all;
-	-o-transition: .5s ease all;
-	transition: .5s ease all;
-}
-.header:hover .search #searchTextField:focus{
-	-webkit-box-shadow: 0px 4px 9px -3px rgba(0,0,0,0.63);
-	-moz-box-shadow: 0px 4px 9px -3px rgba(0,0,0,0.63);
-	box-shadow: 0px 4px 9px -3px rgba(0,0,0,0.63);
-}
-.header:hover .search #searchTextField{
-	width: 540px;
-}
-.header .buttons{
-	display: inline-block;
-	height: 64px;
-	float: right;
-	text-align: right;
-	padding-top: 12px;
-}
-
-
-.side-panel{
+.header .buttons .button-top{
+	width: 42px;
+	height: 42px;
 	position: absolute;
-	left: -230px;
-	top: 64px;
-	width: 200px;
-	background-color: #fff;
-	-webkit-box-shadow: 0px 4px 9px -3px rgba(0,0,0,0.63);
-	-moz-box-shadow: 0px 4px 9px -3px rgba(0,0,0,0.63);
-	box-shadow: 0px 4px 9px -3px rgba(0,0,0,0.63);
-	-webkit-transition: .5s ease all;
-	-o-transition: .5s ease all;
-	transition: .5s ease all;
-    overflow-y: scroll;
+	top: 24px;
+	right: 0;
 }
-.side-panel.open{
-	left: 0;
+.header .buttons .button-top button{
+	width: 42px;
+	height: 42px;
+	border-radius: 50%;
+	background-color: #fff;
+	border: none;
+	vertical-align: middle;
+	box-shadow: 0 0 20px rgba(0,0,0,0.2);
+	font-size: 20px;
+	transition: box-shadow .5s ease;
+	z-index: 100;
+	position: relative;
+}
+.header .buttons .button-build{
+	right: 160px;
+}
+.header .buttons .button-delete-nodes{
+	right: 80px;
+}
+.header .buttons .button-top:hover button{
+	box-shadow: 0 0 25px rgba(0,0,0,0.3);
+}
+.header .button-top .extend{
+	background-color: #626262;
+	padding: 4px;
+	color: #ffffff;
+	font-size: 12px;
+	position: absolute;
+	z-index: 50;
+	width: 78px;
+	margin-left: -17px;
+	border-radius: 8px;
+	top: 9px;
+	opacity: 0;
+	transition: all .5s ease;
+	box-shadow: 0 0 20px rgba(0,0,0,0.2);
+	text-align: center;
+}
+.header .settings{
+	position: absolute;
+	top: 24px;
+	left: 350px;
+	height: 42px;
+}
+.header .settings .button-settings{
+	padding: 10px 20px;
+	background-color: #fff;
+	border-radius: 12px;
+	border: none;
+	box-shadow: 0 0 20px rgba(0,0,0,0.2);
+	margin-left: 30px;
+	transition: box-shadow .5s ease;
+}
+.header .button-top:hover .extend{
+	top: 50px;
+	opacity: 1;
+}
+.header .settings .button-settings:hover{
+	box-shadow: 0 0 25px rgba(0,0,0,0.3);
+}
+.header .settings .button-settings .icon i{
+	transition: transform .5s ease;
+}
+.header .settings .button-settings:hover .icon i{
+	transform: rotate(90deg);
+}
+.header .settings .button-settings .name{
+	margin-left: 10px;
+	font-size: 18px;
+}
+.header .settings .button-settings .icon{
+	font-size: 18px;
 }
 
-.footer{
-	height: 27px;
-	background-color: #4285F4;
-	color: #fff;
-    line-height: 27px;
-    text-align: center;
+
+/*кастомные стили для подсказок из поля ввода*/
+.pac-container{
+	border-radius: 12px;
+	margin-top: 12px;
 }
-.footer a{
-    color: #fff;
-    font-size: 16px;
+.pac-item{
+	padding: 5px;
+}
+.pac-item:hover{
+	background-color: #e8e8e8;
+}
+
+/*table*/
+.table-outer{
+	position: absolute;
+	width: 350px;
+	min-height: 100px;
+	background-color: #ffffff;
+	border-radius: 6px;
+	overflow: hidden;
+	z-index: 99;
+	left: 0;
+	top: -300px;
+	display: none;
+	box-shadow: 0 0 20px rgba(0,0,0,0.2);
+	padding: 15px;
+}
+.table-inner{
+	/*border: 1px solid black;*/
+	position: relative;
+	text-align: center;
+}
+.table-inner .top{
+	margin-bottom: 20px;
+}
+.table-inner .bottom{
+	margin-top: 20px;
+}
+.table-inner button.close{
+	position: absolute;
+	top: -8px;
+	right: -7px;
+	font-size: 25px;
+	color: #000000;
+	transition: color .5s ease;
+	opacity: 1;
+}
+.table-inner button.close:hover{
+	color: #7a7a7a;
+}
+.table-inner button.delete-node{
+	padding: 7px 16px;
+	background-color: #ff3620;
+	border-radius: 10px;
+	border: none;
+	color: #ffffff;
+	transition: background-color .5s ease;
+}
+.table-inner button.delete-node:hover{
+	background-color: rgba(242, 62, 35, 0.73);
+}
+.table-inner .table-content{
+	width: 240px;
+	margin: 0 auto;
+	overflow-y: auto;
+	max-height: 400px;
+	min-height: 100px;
+}
+.table-inner .table-content table{
+	border-collapse: collapse;
+	margin: 0 auto;
+}
+.table-inner .table-content table td{
+	/*border: 1px solid #eeeef0;*/
+	border: 1px solid black;
+	text-align: center;
+	width: 100px;
+}
+.table-inner .table-content table td input{
+	margin: 0 auto;
+}
+/*custom scroll*/
+.table-inner .table-content::-webkit-scrollbar {
+	width: 6px;
+	background-color: #F5F5F5;
+	border-radius: 3px;
+}
+.table-inner .table-content::-webkit-scrollbar-thumb {
+	background-color: #626262;
+	border-radius: 3px;
+}
+.table-inner .table-content::-webkit-scrollbar-track {
+	background-color: #F5F5F5;
+	border-radius: 3px;
+}
+
+
+/*back*/
+.back{
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0,.5);
+	z-index: 500;
+	cursor: pointer;
+	display: none;
+}
+
+/*popup*/
+.popup{
+	width: 500px;
+	border-radius: 12px;
+	min-height: 100px;
+	background-color: #fff;
+	position: fixed;
+	z-index: 50;
+	top: 100px;
+	left: 50%;
+	margin-left: -250px;
+	z-index: 600;
+	display: none;
+}
+.popup .popup-wrap{
+	margin: 10px;
+	position: relative;
+	text-align: center;
+	padding: 20px 15px;
+}
+.popup .close{
+	position: absolute;
+	top: -2px;
+	right: 0;
+	border: none;
+	opacity: 1;
+	transition: opacity .5s ease;
+}
+.popup .close:hover{
+	opacity: .5;
+}
+.popup h2{
+	margin-top: 0;
+	margin-bottom: 20px;
+}
+
+/*popup info*/
+.button-write{
+	padding: 10px 50px;
+	background-color: #fff343;
+	border-radius: 12px;
+	color: #000000;
+	transition: opacity .5s ease;
+	display: inline-block;
+}
+.button-write:hover{
+	text-decoration: none;
+	opacity: .7;
+	color: #000000;
+}
+
+/*block developers in popup*/
+.developers{
+
+	margin: 30px;
+}
+.developer{
+	width: 50%;
+	float: left;
+	text-align: center;
+	display: block;
+	cursor: pointer;
+	color: #000000;
+}
+.developer:hover{
+	color: #000000;
+	text-decoration: none;
+}
+.developer__img{
+	width: 100px;
+	height: 100px;
+	border-radius: 50%;
+	overflow: hidden;
+	margin: 0 auto;
+	transition: transform .5s ease;
+}
+.developer:hover .developer__img{
+	transform: scale(1.08, 1.08);
+}
+.developer__img img{
+	width: 100%;
+}
+.developer__name{
+	margin-top: 10px;
 }
